[package]
name = "spl06-007"
version = "0.3.0"
edition = "2021"
authors = ["Sam Bradshaw"]
description = "Driver for the SPL06-007 barometric pressure sensor"
repository = "https://github.com/roxgib/SPL06-007"
license = "MIT"
categories = ["embedded", "hardware-support", "no-std", "no-std::no-alloc", "embedded-hal-driver"]

[dependencies]
embedded-hal = "0.2"
libm = "0.2"

[dev-dependencies]
embedded-hal-mock = "0.9"